# exordium

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  exordium.cabal  package.yaml  stack.yaml
base/: IO.hs  base.cabal
base/bool/prim/: Bool.hs
base/char/base/: Char.hs
base/classes/stock/: Bounded.hs  Debug.hs  Enum.hs  Eq.hs  Foldable.hs  Ord.hs
base/floating/base/: F32.hs  F64.hs
base/floating/base/cbits/: double.c  float.c
base/floating/prim/: F32.hs  F64.hs
base/floating/prim/F32/: Encoding.hs
base/floating/prim/cbits/: float.c
base/int/base/: I16.hs  I32.hs  I64.hs  I8.hs  ISize.hs  Isize.hs  Types.hs  U16.hs  U32.hs  U64.hs  U8.hs  USize.hs  Usize.hs
base/int/prim/: Bool.hs  I16.hs  I32.hs  I64.hs  I8.hs  Isize.hs  Types.hs  U16.hs  U32.hs  U64.hs  U8.hs  Usize.hs
base/int/prim/I32/: Native.hs  Shim.hs
base/int/prim/I64/: Native.hs  Shim.hs
base/int/prim/U32/: Native.hs  Shim.hs
base/int/prim/U64/: Native.hs  Shim.hs
base/int/sig/: Int.hsig
base/myoption/: Option.hs
base/option-sig/: Option.hsig
base/test/: Int.hsig  Test.hs
base/void/: Void.hs
data/: data.cabal
data/bool/base/: Bool.hs
data/bool/sig/: Bool.hsig
data/char/sig/: Char.hsig
data/test/: Main.hs
exordium/: .ghc.environment.x86_64-linux-8.6.0.20180810  README.md  exordium.cabal
exordium-prim/: Enum.hs  Eq.hs  Ord.hs  exordium-prim.cabal
exordium/src/: X.hs
src/: AFold.hs  AGetter.hs  AGrate.hs  ALens.hs  APrism.hs  AReview.hs  ASetter.hs  Adjoint.hs  AffFold.hs  AffFoldMap.hs  AffFoldable.hs  AffTraversable.hs  AffTraversal.hs  AffTraverse.hs  AffTraversed.hs  AffTraversing.hs  Align.hs  AllSatisfied.hs  AnEquality.hs  AnIso.hs  Any.hs  Append.hs  Applicative.hs  Apply.hs  ApplyF.hs  ApplyP.hs  Applying.hs  Arr.hs  Assoc.hs  Baz.hs  Bazaar.hs  BiAffFoldMap.hs  BiAffFoldable.hs  BiComap.hs  BiFoldMap.hs  BiFoldMap0.hs  BiFoldMap1.hs  BiRelFoldMap.hs  BiRelFoldable.hs  Biapply.hs  (+232 more)
src/ADT/: Bool.hs  E.hs  E.hs-boot  Maybe.hs  Maybe.hs-boot  These.hs  These.hs-boot  Where.hs  X.hs
src/ALens/: Pretext.hs  Shop.hs
src/APrism/: Market.hs  Type.hs
src/Addr/: Prim.hs
src/Adjoint/: Class.hs  L.hs
src/Align/: Class.hs
src/AnEquality/: Identical.hs
src/AnIso/: Exchange.hs  Re.hs
src/Append/: Laws.hs
src/Applicative/: Class.hs
src/Apply/: Class.hs
src/Arrow/: Category.hs  Closed.hs  Coindexed.hs  Compose.hs  Folded.hs  ITraversed.hs  Indexed.hs  IndexedP.hs  Loop.hs  Mapped.hs  Postcoerce.hs  Precoerce.hs  Promap.hs  Representable.hs  Sieve.hs  Tabulated.hs  Transformed.hs  Traversed.hs
src/BiComap/: Class.hs
src/Biextract/: Laws.hs
src/BifoldMap/: Class.hs
src/BifoldMap0/: Class.hs
src/BifoldMap1/: Class.hs
src/BifoldMap_/: Class.hs
src/BigNat/: Type.hs
src/Bimap/: Class.hs  Laws.hs
src/Bind/: Class.hs
src/Bitraverse/: Class.hs  Internal.hs
src/Bitraverse0/: Class.hs
src/Bitraverse1/: .Class.hs.swo  Class.hs  Internal.hs
src/Bitraverse_/: Class.hs
src/Bool/: Type.hs
src/Cast/: Coerce.hs  Internal.hs
src/Category/: Class.hs
src/Char/: Prim.hs
src/Class/: Adjoint.hs  Align.hs  Applicative.hs  Apply.hs  BiComap.hs  BifoldMap_.hs  Bimap.hs  Bind.hs  Category.hs  Closed.hs  CoLMap.hs  CoRMap.hs  Coapplicative.hs  Comap.hs  Comonad.hs  Compose.hs  Dimap.hs  Distributive.hs  Divide.hs  Duplicate.hs  Empty.hs  Env.hs  FMap.hs  FPure.hs  FoldMap.hs  FoldMap0.hs  FoldMap1.hs  FoldMap_.hs  Forall2.hs  Implies.hs  Indexable.hs  LMap.hs  Lens.hs  Lifts.hs  Map.hs  MapIso.hs  MapM.hs  Mapping.hs  Measured.hs  Monad.hs  (+25 more)
src/Closed/: Class.hs  Internal.hs
src/CoLMap/: Class.hs
src/CoRMap/: Class.hs
src/Coapplicative/: Class.hs
src/Comap/: Class.hs  L.hs  Laws.hs  R.hs
src/Comonad/: Class.hs
src/Compact/: Prim.hs
src/Compose/: Class.hs
src/Cons/: Class.hs
src/Constraint/: Implies.hs  Impossible.hs  Lifts.hs  Pred.hs  Trivial.hs  Type.hs  Witness.hs
src/ContT/: Type.hs
src/Day/: Type.hs
src/Derive/: FromLabel.hs  Optic.hs
src/Dimap/: Class.hs  Internal.hs
src/Distribute/: Class.hs  Internal.hs
src/Distributive/: Class.hs  Internal.hs
src/Divide/: Class.hs
src/Double/: Prim.hs
src/Duplicate/: Class.hs
src/E/: Type.hs  Utils.hs
src/Either/: Laws.hs
src/Empty/: Class.hs  Laws.hs
src/Env/: Class.hs
src/Exception/: Prim.hs
src/FApply/: Class.hs
src/FMap/: Class.hs
src/FPlus/: Class.hs
src/FPure/: Class.hs
src/FingerTree/: Digit.hs  Node.hs
src/Float/: Prim.hs
src/Fold/: Bi.hs  First.hs  I.hs
src/FoldMap/: Bi.hs  Class.hs  First.hs  I.hs
src/FoldMap0/: Class.hs
src/FoldMap1/: Class.hs
src/FoldMap_/: Class.hs
src/Forall2/: Class.hs
src/FromInteger/: Int.hs  Integer.hs
src/Functor/: .ITraverse.hs.swo  Adjoint.hs  Align.hs  Applicative.hs  Apply.hs  Assoc.hs  BiComap.hs  Bifold.hs  Bimap.hs  Bind.hs  Bipure.hs  Bitraverse.hs  Coerce1.hs  Comap.hs  Comonad.hs  Distribute.hs  Distribute.hs-boot  Duplicate.hs  Empty.hs  Fold.hs  IFold.hs  IMap.hs  ITraverse.hs  Indexed.hs  Map'.hs  Map.hs  Monad.hs  Plus.hs  Pure.hs  Swap.hs  Traverse.hs  Unfold.hs  Zip.hs  Zip.hs-boot
src/GADT/: HList.hs
src/Grate/: Grating.hs
src/Grates/: Grating.hs
src/I/: Type.hs
src/IO/: Prim.hs  Type.hs
src/Implies/: Class.hs
src/InLR/: Class.hs
src/Indexable/: Class.hs
src/Int/: I.hs  I16.hs  I32.hs  I64.hs  I8.hs  Prim.hs  Type.hs
src/Int16/: Type.hs
src/Int32/: Type.hs
src/Int64/: Type.hs
src/Int8/: Type.hs
src/Integer/: Type.hs
src/Internal/: Dimap.hs  Distributive.hs  Mapping.hs  Traversal.hs
src/Isos/: AnIso.hs  Re.hs
src/K/: Type.hs
src/Kind/: Constraint.hs  Nat.hs  Symbol.hs  Type.hs
src/LMap/: Class.hs
src/Laws/: Apply.hs
src/Lens/: Class.hs  Type.hs
src/Lifts/: Class.hs
src/MFix/: Class.hs
src/MVar/: Prim.hs
src/Map/: Bi.hs  Class.hs  Co.hs  Di.hs  I.hs  Impl.hs  Iso.hs  L.hs  Laws.hs  Pro.hs  R.hs  T.hs
src/MapIso/: Class.hs
src/MapM/: Class.hs
src/Mapped/: Class.hs  Internal.hs
src/Mapping/: Bar.hs  Class.hs  Internal.hs
src/Maybe/: Type.hs
src/Measured/: Class.hs
src/Monad/: Class.hs  Co.hs  Env.hs  Log.hs  (+2 more)
(+695 files in other folders)
