name:                exordium
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/daig/exordium#readme
license:             BSD3
license-file:        LICENSE
author:              Dai
maintainer:          dailectic@gmail.com
copyright:           Sodality
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Addr.Prim
                      ,AffFoldMap, AffTraverse, AffTraversing, AffTraversal
                      ,Append, Append.Laws
                      ,Applicative, Apply
                      ,Assoc
                      ,Bazaar ,Baz
                      ,BiAffFoldMap, Biapply, Biempty, Bimap, Bimap.Laws
                      ,Bind
                      ,Bipure, BiRelFoldMap, Bitraverse
                      ,Bool
                      --,Cast
                      ,Category
                      ,Char.Prim
                      ,ChoiceCompose, Choice
                      ,Closed
                      ,Cochoice
                      ,Coerce
                      ,Comap, Comap.Laws
                      ,Compact.Prim
                      ,Compose
                      ,Cons
                      ,Costrong
                      ,Curry
                      ,Def
                      ,Dipure
                      ,Distributive
                      ,Divide
                      ,Double.Prim
                      ,Embed
                      ,Empty, Empty.Laws
                      ,EqF
                      ,Equality, AnEquality, AnEquality.Identical
                      ,Exception.Prim
                      ,Flip
                      ,Float.Prim
                      ,Fold, AFold
                      ,FoldMap
                      ,Getter
                      ,Hoist
                      ,Hollow
                      ,I
                      ,InLR
                      ,Int, Int.Prim
                      ,IO, IO.Prim
                      ,Iso, AnIso, AnIso.Exchange
                      ,K
                      ,LinFoldMap, LinTraverse
                      ,Map, Map.Laws, MapMaybe, Mapping, MapT
                      ,Market
                      ,Maybe
                      ,Minus
                      ,Monad
                      ,MutVar.Prim
                      ,MVar.Prim
                      ,Nat
                      ,Negate, Negate.Laws
                      ,O
                      ,One
                      ,Option
                      ,Ord
                      ,Plus
                      ,Power, Power.Laws
                      ,Prism, APrism, APrism.Market
                      ,Prod
                      ,Proxy
                      ,Pure
                      ,Recip, Recip.Laws
                      ,RelFoldMap, RelTraverse, RelTraversing, RelTraversal
                      ,Setter, ASetter
                      ,StablePtr.Prim
                      ,STM.Prim
                      ,StrongCompose, Strong
                      ,Sum
                      ,Swap
                      ,These
                      ,Times, Times.Laws
                      ,Traverse, Traversing, Traversal
                      ,Void
                      ,Where
                      ,Word.Prim
                      ,WrapTimes
                      ,Zero
                      ,Zip


  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions: RebindableSyntax 
                     ,AllowAmbiguousTypes
                     ,BangPatterns
                     ,BinaryLiterals
                     ,ConstraintKinds
                     ,DataKinds
                     ,DefaultSignatures
                     ,DeriveAnyClass
                     ,DeriveDataTypeable
                     ,DeriveGeneric
                     ,DeriveLift
                     ,DerivingStrategies
                     ,DuplicateRecordFields
                     ,EmptyCase
                     ,FlexibleContexts
                     ,FlexibleInstances
                     ,FunctionalDependencies
                     ,GADTs
                     ,GeneralizedNewtypeDeriving
                     ,InstanceSigs
                     ,LambdaCase
                     ,MultiWayIf
                     ,NamedFieldPuns
                     ,NamedWildCards
                     ,NegativeLiterals
                     ,NumDecimals
                     ,OverloadedLabels
                     ,OverloadedStrings
                     ,ParallelListComp
                     ,PartialTypeSignatures
                     ,PatternSynonyms
                     ,PolyKinds
                     ,RankNTypes
                     ,RecordWildCards
                     ,RecursiveDo
                     ,RoleAnnotations
                     ,ScopedTypeVariables
                     ,StandaloneDeriving
                     ,StrictData
                     ,TupleSections
                     ,TypeApplications
                     ,TypeFamilyDependencies
                     ,TypeOperators
                     ,ViewPatterns
  build-depends:       base >= 4.7 && < 5
                     , async
                     , ghc-prim
                     , template-haskell

source-repository head
  type:     git
  location: https://github.com/daig/exordium
