name:                exordium
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/daig/exordium#readme
license:             MIT
license-file:        LICENSE
author:              Dai
maintainer:          dailectic@gmail.com
copyright:           2017 Dai
category:            Prelude
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Addr.Prim
                      ,AffFoldMap, AffTraverse, AffTraversed, AffTraversal
                      ,Append, Append.Laws
                      ,Applicative, Apply
                      ,Arr
                      ,Assoc
                      ,Bazaar ,Baz
                      ,BiAffFoldMap, Biapply, Biempty, Bimap, Bimap.Laws
                      ,Bind
                      ,Bipure, BiRelFoldMap, Bitraverse
                      ,Bool
                      --,Cast
                      ,Category
                      ,Char.Prim
                      ,ChoiceCompose, Choice
                      ,Closed
                      ,Cochoice
                      ,Coerce
                      ,Constraint
                      ,Comap, Comap.Laws, BiComap
                      ,Compact.Prim
                      ,Compose
                      ,Cons
                      ,Unstrong
                      ,Def
                      ,Either
                      ,Dimap
                      ,Distributive
                      ,Divide
                      ,Double.Prim
                      ,Embed
                      ,Empty, Empty.Laws
                      ,EqF
                      ,Equality, AnEquality, AnEquality.Identical
                      ,Exception.Prim
                      ,Flip
                      ,Float.Prim
                      ,Fold, AFold, AffFold, RelFold
                      ,FoldMap, BiFoldMap
                      ,Forget
                      ,Fun
                      ,Getter
                      ,Hoist
                      ,Hollow
                      ,I
                      ,InLR
                      ,Int, Int.Prim
                      ,IO, IO.Prim
                      ,Iso, AnIso, AnIso.Exchange, AnIso.Re
                      ,K
                      ,Lens
                      ,LinFoldMap, LinTraverse
                      ,Map, Map.Laws, MapMaybe, Mapping, Mapping.Bar, MapT
                      ,Maybe
                      ,Minus
                      ,Monad
                      ,MutVar.Prim
                      ,MVar.Prim
                      ,Nat
                      ,NatTrans
                      ,Negate, Negate.Laws
                      ,O
                      ,One
                      ,Option
                      ,Ord
                      ,Plus
                      ,Power, Power.Laws
                      ,Prism, APrism, APrism.Market
                      ,Profunctor
                      ,Proxy
                      ,Pure
                      ,Recip, Recip.Laws
                      ,RelFoldMap, RelTraverse, RelTraversed, RelTraversal
                      ,Setter, ASetter
                      ,StablePtr.Prim
                      ,STM.Prim
                      ,StrongCompose, Strong
                      ,Sum
                      ,Swap
                      ,These
                      ,Times, Times.Laws
                      ,Traverse, Traversed, Traversal, LinTraversed
                      ,Trivial
                      ,Types
                      ,Void
                      ,Where
                      ,Witness
                      ,Word.Prim
                      ,WrapTimes
                      ,Zero
                      ,Zip


  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                     ,AllowAmbiguousTypes
                     ,BangPatterns
                     ,BinaryLiterals
                     ,ConstraintKinds
                     ,DataKinds
                     ,DefaultSignatures
                     ,DeriveAnyClass
                     ,DeriveDataTypeable
                     ,DeriveGeneric
                     ,DeriveLift
                     ,DerivingStrategies
                     ,DuplicateRecordFields
                     ,EmptyCase
                     ,FlexibleContexts
                     ,FlexibleInstances
                     ,FunctionalDependencies
                     ,GADTs
                     ,GeneralizedNewtypeDeriving
                     ,InstanceSigs
                     ,LambdaCase
                     ,MultiWayIf
                     ,NamedFieldPuns
                     ,NamedWildCards
                     ,NegativeLiterals
                     ,NumDecimals
                     ,OverloadedLabels
                     ,OverloadedStrings
                     ,ParallelListComp
                     ,PartialTypeSignatures
                     ,PatternSynonyms
                     ,PolyKinds
                     ,RankNTypes
                     ,RecordWildCards
                     ,RecursiveDo
                     ,RoleAnnotations
                     ,ScopedTypeVariables
                     ,StandaloneDeriving
                     ,StrictData
                     ,TupleSections
                     ,TypeApplications
                     ,TypeFamilyDependencies
                     ,TypeOperators
                     ,ViewPatterns
  build-depends:       base >= 4.7 && < 5
                     , async
                     , ghc-prim
                     , template-haskell

source-repository head
  type:     git
  location: https://github.com/daig/exordium
