cabal-version: 2.2
name:           exordium-base
version:        0.1.0.0

extra-source-files:
    floating/base/LICENSE.Tango
    floating/cbits/feqrel_source.c

source-repository head
  type: git
  location: https://github.com/daig/exordium

common x
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude,PatternSynonyms, LambdaCase, DataKinds, KindSignatures, ConstraintKinds, DeriveAnyClass, GeneralizedNewtypeDeriving, DerivingStrategies, MagicHash, UnboxedTuples, ViewPatterns
  build-depends: ghc-prim
  

library bool-sig
  import: x
  signatures: Bool
  hs-source-dirs: bool/sig
  build-depends: base

library char-sig
  import: x
  signatures: Char
  hs-source-dirs: char/sig
  build-depends: base, bool-sig

library char-base
  import: x
  exposed-modules: Char
  reexported-modules: Bool
  hs-source-dirs: char/base
  build-depends: base, bool-base

library option-sig
  import: x
  signatures: Option
  hs-source-dirs: option-sig
  build-depends: bool-sig, base

library option-my
  import: x
  exposed-modules: Option
  hs-source-dirs: myoption
  build-depends: base, bool-prim

library bool-base
  import: x
  exposed-modules: Bool
  hs-source-dirs: bool-base
  build-depends: base

library bool-prim
  import: x
  exposed-modules: Bool
  hs-source-dirs: bool-prim
  build-depends: base,ghc-prim

library floating-base
  import: x
  hs-source-dirs: floating/base
  exposed-modules: F32,F64
  cc-options: -Wall --std=c99
  c-sources: floating/base/cbits/float.c
             floating/base/cbits/double.c
  build-depends: ghc-prim, base, debug

library int-base
  import: x
  hs-source-dirs: int/base
  exposed-modules: ISize, I8, I16, I32, I64
                 , USize, U8, U16, U32, U64
  build-depends: ghc-prim, base, int-prim
  --mixins: int-prim (Isize as Prim.Isize, I8 as Prim.I8, I16 as Prim.I16, I32 as Prim.I32, I
                   --,Usize as Prim.Usize

library int-prim
  import: x
  hs-source-dirs: int/prim
  exposed-modules: Isize, I8, I16, I32, I64
                 , Usize, U8, U16, U32, U64
                 , Bool
  other-modules: I32.Native, I32.Shim, I64.Native, I64.Shim
               , U32.Native, U32.Shim, U64.Native, U64.Shim
               , Types
  build-depends: ghc-prim, base

library debug
  import: x
  hs-source-dirs: classes
  exposed-modules: Debug
  build-depends: ghc-prim, base

library test-lib
  import: x
  build-depends: base,char-sig
  hs-source-dirs: test
  exposed-modules: Test
  --reexported-modules: Bool

--executable test
  --import: x
  --type: exitcode-stdio-1.0
  --main-is: Main.hs
  --hs-source-dirs: test
  --build-depends: test-lib
