cabal-version: 2.2
name:           data
version:        0.1.0.0
category:       Prelude
homepage:       https://github.com/daig/exordium#readme
bug-reports:    https://github.com/daig/exordium/issues
author:         Dai
maintainer:     dailectic@gmail.com
copyright:      2018 Dai
license:        MIT
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/daig/exordium

common x
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude,PatternSynonyms, LambdaCase, DataKinds, KindSignatures
  build-depends: ghc-prim
  

library bool-sig
  import: x
  signatures: Bool
  hs-source-dirs: bool-sig
  build-depends: base

library char-sig
  import: x
  signatures: Char
  hs-source-dirs: char-sig
  build-depends: base, bool-sig

library char-base
  import: x
  exposed-modules: Char
  reexported-modules: Bool
  hs-source-dirs: char-base
  build-depends: base, bool-base

library option-sig
  import: x
  signatures: Option
  hs-source-dirs: option-sig
  build-depends: bool-sig, base

library option-my
  import: x
  exposed-modules: Option
  hs-source-dirs: myoption
  build-depends: base, bool-prim

library bool-base
  import: x
  exposed-modules: Bool
  hs-source-dirs: bool-base
  build-depends: base

library bool-prim
  import: x
  exposed-modules: Bool
  hs-source-dirs: bool-prim
  build-depends: base,ghc-prim

library

library test-lib
  import: x
  build-depends: base,char-sig
  hs-source-dirs: test
  exposed-modules: Test
  --reexported-modules: Bool

executable test
  import: x
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test-lib
  build-depends: test
